--- a/LCD-i2c/platformio.ini
+++ b/LCD-i2c/platformio.ini
@@ -7,3 +7,12 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+
+[env:esp01_1m]
+platform = espressif8266
+board = esp01_1m
+framework = arduino
+upload_protocol = espota
+upload_flags = --port=8266
+;lib_extra_dirs = ~/working/platformio/lib
+
