--- a/OLED-example/platformio.ini
+++ b/OLED-example/platformio.ini
@@ -8,11 +8,12 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp01_1m]
-platform = espressif8266
-;board = nodemcuv2
-board = esp01_1m
+[env:nano_33_iot]
+platform = atmelsam
+board = nano_33_iot
 framework = arduino
-;upload_protocol = espota
-upload_flags =
-  --port=8266
+platform_packages = 
+     toolchain-gccarmnoneeabi@https://bintray.com/platformio/tool-packages/download_file?file_path=5966cc5-toolchain-gccarmnoneeabi-linux_aarch64-1.90301.200702.tar.gz
+lib_extra_dirs = 
+    /home/rsteenbu/remote-repots/ArduinoOTA
+
