Turned relay into a class header

--- a/LightSwitch/platformio.ini
+++ b/LightSwitch/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif8266
 ;board = nodemcuv2
 board = esp01_1m
 framework = arduino
-;upload_protocol = espota
+upload_protocol = espota
 upload_flags =
   --port=8266
+lib_extra_dirs = ~/working/platformio/lib
