--- a/ESP32-bootstrap/platformio.ini
+++ b/ESP32-bootstrap/platformio.ini
@@ -8,10 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp01_1m]
-platform = espressif8266
-board = esp01_1m
+[env:esp32]
+platform = espressif32
+board = esp32dev
 framework = arduino
-upload_flags = 
-	--port=8266
-;lib_deps = bportaluri/WiFiEsp@^2.2.2
+upload_protocol = espota
+;upload_flags = 
+;	--port=/dev/ttyUSB0
