LED Xmas lights

--- a/LEDChristmasLights/platformio.ini
+++ b/LEDChristmasLights/platformio.ini
@@ -7,11 +7,15 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+[extra]
+build_flags = -D 'WIFI_SSID="736848"' -D 'WIFI_PASS="fool.482.weird"'
+
 
 [env:esp32]
 platform = espressif32
 board = esp32dev
 framework = arduino
 upload_protocol = espota
+build_flags = ${extra.build_flags}
 ;upload_flags = 
 ;	--port=/dev/ttyUSB0
