xmas lights working with octo! distance sensor to motionsensor

--- a/LEDLightStripTesting-teensy/platformio.ini
+++ b/LEDLightStripTesting-teensy/platformio.ini
@@ -11,33 +11,23 @@
 build_flags = -D 'WIFI_SSID="***REMOVED***"' -D 'WIFI_PASS="***REMOVED***"'
 ;build_flags = -D 'WIFI_SSID="736848"' -D 'WIFI_PASS="fool.482.weird"'
 
-[env:teensy_usb]
+[env:teensy41_usb]
 platform = teensy
 board = teensy41
 framework = arduino
-build_flags = ${extra.build_flags}
-lib_deps = 
-   WiFi
+;build_flags = ${extra.build_flags}
 platform_packages = 
    toolchain-gccarmnoneeabi@https://bintray.com/platformio/tool-packages/download_file?file_path=3579c14-toolchain-gccarmnoneeabi-linux_armv6l-1.90301.200702.tar.gz
    tool-teensy@https://github.com/maxgerhardt/pio-tool-teensy-arm/archive/master.zip
+;    platformio/toolchain-gccarmnoneeabi @ 1.90301.200702
 
 
-[env:esp32_usb]
-platform = espressif32
-board = esp32dev
+[env:teensy32_usb]
+platform = teensy
+board = teensy31
 framework = arduino
-build_flags = ${extra.build_flags}
-
-[env:nodemcu_usb]
-platform = espressif8266
-board = nodemcuv2
-framework = arduino
-build_flags = ${extra.build_flags}
-
-[env:nodemcu_wifi]
-platform = espressif8266
-board = nodemcuv2
-framework = arduino
-build_flags = ${extra.build_flags}
-upload_protocol = espota
+;build_flags = ${extra.build_flags}
+;platform_packages = 
+;   toolchain-gccarmnoneeabi@https://bintray.com/platformio/tool-packages/download_file?file_path=3579c14-toolchain-gccarmnoneeabi-linux_armv6l-1.90301.200702.tar.gz
+;   tool-teensy@https://github.com/maxgerhardt/pio-tool-teensy-arm/archive/master.zip
+;    platformio/toolchain-gccarmnoneeabi @ 1.90301.200702
