--- a/LED-teensy-test/platformio.ini
+++ b/LED-teensy-test/platformio.ini
@@ -15,29 +15,9 @@ build_flags = -D 'WIFI_SSID="***REMOVED***"' -D 'WIFI_PASS="***REMOVED***"'
 platform = teensy
 board = teensy41
 framework = arduino
-build_flags = ${extra.build_flags}
-lib_deps = 
-   WiFi
+;build_flags = ${extra.build_flags}
 platform_packages = 
    toolchain-gccarmnoneeabi@https://bintray.com/platformio/tool-packages/download_file?file_path=3579c14-toolchain-gccarmnoneeabi-linux_armv6l-1.90301.200702.tar.gz
    tool-teensy@https://github.com/maxgerhardt/pio-tool-teensy-arm/archive/master.zip
+;   platformio/toolchain-gccarmnoneeabi @ 1.90301.200702
 
-
-[env:esp32_usb]
-platform = espressif32
-board = esp32dev
-framework = arduino
-build_flags = ${extra.build_flags}
-
-[env:nodemcu_usb]
-platform = espressif8266
-board = nodemcuv2
-framework = arduino
-build_flags = ${extra.build_flags}
-
-[env:nodemcu_wifi]
-platform = espressif8266
-board = nodemcuv2
-framework = arduino
-build_flags = ${extra.build_flags}
-upload_protocol = espota
