--- a/MotionSensor/platformio.ini
+++ b/MotionSensor/platformio.ini
@@ -8,11 +8,14 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[extra]
+build_flags = -D 'WIFI_SSID="***REMOVED***"' -D 'WIFI_PASS="***REMOVED***"' -D 'ADALIB'
+
 [env:nodemcuv2]
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
 upload_protocol = espota
-upload_flags =
-  --port=8266
+build_flags = ${extra.build_flags}
+upload_port = iot-computerroom
 lib_extra_dirs = ~/working/platformio/lib
