Frontyard -- and lots of other stuff

--- a/LightStrip-Octo2811/platformio.ini
+++ b/LightStrip-Octo2811/platformio.ini
@@ -7,17 +7,22 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+
 [extra]
 build_flags = -D 'WIFI_SSID="***REMOVED***"' -D 'WIFI_PASS="***REMOVED***"'
-;build_flags = -D 'WIFI_SSID="736848"' -D 'WIFI_PASS="fool.482.weird"'
 
-[env:teensy_usb]
+[env:teensy41_usb]
 platform = teensy
 board = teensy41
 framework = arduino
-;build_flags = ${extra.build_flags}
 platform_packages = 
-   toolchain-gccarmnoneeabi@https://bintray.com/platformio/tool-packages/download_file?file_path=3579c14-toolchain-gccarmnoneeabi-linux_armv6l-1.90301.200702.tar.gz
-   tool-teensy@https://github.com/maxgerhardt/pio-tool-teensy-arm/archive/master.zip
-;   platformio/toolchain-gccarmnoneeabi @ 1.90301.200702
+	toolchain-gccarmnoneeabi@https://bintray.com/platformio/tool-packages/download_file?file_path=3579c14-toolchain-gccarmnoneeabi-linux_armv6l-1.90301.200702.tar.gz
+	tool-teensy@https://github.com/maxgerhardt/pio-tool-teensy-arm/archive/master.zip
+lib_deps = jandrassy/WiFiEspAT@^1.3.1
 
+[env:teensy32_usb]
+platform = teensy
+board = teensy31
+framework = arduino
+lib_deps = jandrassy/WiFiEspAT@^1.3.1
+build_flags = ${extra.build_flags}
