--- a/FrontYard/platformio.ini
+++ b/FrontYard/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [extra]
-build_flags = -D 'WIFI_SSID="***REMOVED***"' -D 'WIFI_PASS="***REMOVED***"' -D 'DEVICE_HOSTNAME="iot-lightswitch03"'
+build_flags = -D 'WIFI_SSID="***REMOVED***"' -D 'WIFI_PASS="***REMOVED***"' -D 'DEVICE_HOSTNAME="iot-frontyard"'
 
 [env:nodemcu_usb]
 platform = espressif8266
@@ -24,7 +24,7 @@ framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/working/platformio/lib
 upload_protocol = espota
-upload_port = iot-xmastree
+upload_port = iot-frontyard
 
 [env:d1mini_usb]
 platform = espressif8266
@@ -40,7 +40,7 @@ framework = arduino
 build_flags = ${extra.build_flags}
 upload_protocol = espota
 lib_extra_dirs = ~/working/platformio/lib
-
+upload_port = iot-frontyard
 
 [env:esp01_usb]
 platform = espressif8266
@@ -56,4 +56,4 @@ framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/working/platformio/lib
 upload_protocol = espota
-upload_port = iot-lightswitch02
+upload_port = iot-frontyard
