--- a/LightSwitch-i2c/platformio.ini
+++ b/LightSwitch-i2c/platformio.ini
@@ -7,12 +7,13 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
-[extra]
-build_flags = -D 'WIFI_SSID="***REMOVED***"' -D 'WIFI_PASS="***REMOVED***"'
 
 [env:esp01_1m]
 platform = espressif8266
+;board = nodemcuv2
 board = esp01_1m
 framework = arduino
-build_flags = ${extra.build_flags}
+upload_protocol = espota
+upload_flags =
+  --port=8266
 lib_extra_dirs = ~/working/platformio/lib
