--- a/LightSwitch/platformio.ini
+++ b/LightSwitch/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [extra]
-build_flags = -D 'WIFI_SSID="***REMOVED***"' -D 'WIFI_PASS="***REMOVED***"' -D 'DEVICE_HOSTNAME="iot-lightswitch03"'
+build_flags = -D 'WIFI_SSID="***REMOVED***"' -D 'WIFI_PASS="***REMOVED***"' -D 'DEVICE_HOSTNAME="iot-lightswitch03"' -D 'SYSLOG_SERVER="ardupi4"' -D 'SYSLOG_PORT=514'
 
 [env:nodemcu_usb]
 platform = espressif8266
