--- a/BackYardLights/platformio.ini
+++ b/BackYardLights/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [extra]
-build_flags = -D 'WIFI_SSID="***REMOVED***"' -D 'WIFI_PASS="***REMOVED***"' -D 'DEVICE_HOSTNAME="iot-compdeskswitch"' -D 'SYSLOG_SERVER="ardupi4"' -D 'SYSLOG_PORT=514'
+build_flags = -D 'WIFI_SSID="***REMOVED***"' -D 'WIFI_PASS="***REMOVED***"' -D 'DEVICE_HOSTNAME="iot-backyardlight"' -D 'SYSLOG_SERVER="ardupi4"' -D 'SYSLOG_PORT=514'
 
 [env:nodemcu_usb]
 platform = espressif8266
@@ -24,7 +24,7 @@ framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/working/platformio/lib
 upload_protocol = espota
-upload_port = iot-xmastree
+upload_port = iot-backyardlight
 
 [env:d1mini_usb]
 platform = espressif8266
@@ -41,7 +41,6 @@ build_flags = ${extra.build_flags}
 upload_protocol = espota
 lib_extra_dirs = ~/working/platformio/lib
 
-
 [env:esp01_usb]
 platform = espressif8266
 board = esp01_1m
@@ -56,4 +55,4 @@ framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/working/platformio/lib
 upload_protocol = espota
-upload_port = iot-compdeskswitch
+upload_port = iot-backyardlight
