i2c gpio port expander working

--- a/BackyardShed/platformio.ini
+++ b/BackyardShed/platformio.ini
@@ -56,4 +56,4 @@ framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/working/platformio/lib
 upload_protocol = espota
-upload_port = iot-compdeskswitch
+upload_port = iot-backyardshed
