MCP for relay and ads for analog working in relay class!

--- a/FrontYard/platformio.ini
+++ b/FrontYard/platformio.ini
@@ -10,50 +10,18 @@
 [extra]
 build_flags = -D 'WIFI_SSID="***REMOVED***"' -D 'WIFI_PASS="***REMOVED***"' -D 'DEVICE_HOSTNAME="iot-frontyard"' -D 'SYSLOG_SERVER="ardupi4"' -D 'SYSLOG_PORT=514'
 
-[env:nodemcu_usb]
-platform = espressif8266
-board = nodemcuv2
-framework = arduino
-build_flags = ${extra.build_flags}
-lib_extra_dirs = ~/working/platformio/lib
-
-[env:nodemcu_wifi]
-platform = espressif8266
-board = nodemcuv2
-framework = arduino
-build_flags = ${extra.build_flags}
-lib_extra_dirs = ~/working/platformio/lib
-upload_protocol = espota
-upload_port = iot-frontyard
-
-[env:d1mini_usb]
+[env:usb]
 platform = espressif8266
 board = d1_mini
 framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/working/platformio/lib
 
-[env:d1mini_wifi]
+[env:wifi]
 platform = espressif8266
 board = d1_mini
 framework = arduino
 build_flags = ${extra.build_flags}
 upload_protocol = espota
 lib_extra_dirs = ~/working/platformio/lib
-upload_port = iot-frontyard
-
-[env:esp01_usb]
-platform = espressif8266
-board = esp01_1m
-framework = arduino
-build_flags = ${extra.build_flags}
-lib_extra_dirs = ~/working/platformio/lib
-
-[env:esp01_wifi]
-platform = espressif8266
-board = esp01_1m
-framework = arduino
-build_flags = ${extra.build_flags}
-lib_extra_dirs = ~/working/platformio/lib
-upload_protocol = espota
 upload_port = iot-frontyard
