--- a/CottageDoor/platformio.ini
+++ b/CottageDoor/platformio.ini
@@ -7,12 +7,21 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+[extra]
+build_flags = -D 'WIFI_SSID="***REMOVED***"' -D 'WIFI_PASS="***REMOVED***"' -D 'DEVICE_HOSTNAME="iot-cottagedoor"' -D 'SYSLOG_SERVER="ardupi4"' -D 'SYSLOG_PORT=514'
 
-[env:esp01_1m]
+[env:usb]
 platform = espressif8266
-;board = nodemcuv2
 board = esp01_1m
 framework = arduino
+build_flags = ${extra.build_flags}
+lib_extra_dirs = ~/working/platformio/lib
+
+[env:wifi]
+platform = espressif8266
+board = esp01_1m
+framework = arduino
+build_flags = ${extra.build_flags}
+lib_extra_dirs = ~/working/platformio/lib
 upload_protocol = espota
-upload_flags =
-  --port=8266
+upload_port = iot-cottagedoor
