--- a/ESP01-bootstrap/platformio.ini
+++ b/ESP01-bootstrap/platformio.ini
@@ -7,8 +7,12 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+[platformio]
+extra_configs = /home/rsteenbu/working/platformio/common_pio_config.ini
+
 [extra]
-build_flags = -D 'WIFI_SSID="***REMOVED***"' -D 'WIFI_PASS="***REMOVED***"'
+hostname = iot-cottagedoor
+build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"'
 
 [env:usb]
 platform = espressif8266
