--- a/GarageDoor/platformio.ini
+++ b/GarageDoor/platformio.ini
@@ -7,8 +7,12 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+[platformio]
+extra_configs = /home/rsteenbu/working/platformio/common_pio_config.ini
+
 [extra]
-build_flags = -D 'WIFI_SSID="***REMOVED***"' -D 'WIFI_PASS="***REMOVED***"' -D 'DEVICE_HOSTNAME="iot-garagedoor"' -D 'SYSLOG_SERVER="ardupi4"' -D 'SYSLOG_PORT=514'
+hostname = iot-cottagedoor
+build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"'
 
 [env:usb]
 platform = espressif8266
@@ -24,4 +28,4 @@ framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/working/platformio/lib
 upload_protocol = espota
-upload_port = iot-garagedoor
+upload_port = ${extra.hostname}
