--- a/LEDLightStripTesting/platformio.ini
+++ b/LEDLightStripTesting/platformio.ini
@@ -7,9 +7,12 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+[platformio]
+extra_configs = /home/rsteenbu/working/platformio/common_pio_config.ini
+
 [extra]
-build_flags = -D 'WIFI_SSID="***REMOVED***"' -D 'WIFI_PASS="***REMOVED***"'
-;build_flags = -D 'WIFI_SSID="736848"' -D 'WIFI_PASS="fool.482.weird"'
+hostname = iot-lightstrip-testing
+build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"'
 
 [env:teensy_usb]
 platform = teensy
