--- a/LightStrip-Octo2811/platformio.ini
+++ b/LightStrip-Octo2811/platformio.ini
@@ -7,9 +7,12 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+[platformio]
+extra_configs = /home/rsteenbu/working/platformio/common_pio_config.ini
 
 [extra]
-build_flags = -D 'WIFI_SSID="***REMOVED***"' -D 'WIFI_PASS="***REMOVED***"'
+hostname = iot-lightstrip-octo2811
+build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"'
 
 [env:teensy41_usb]
 platform = teensy
