--- a/MotionSensor/platformio.ini
+++ b/MotionSensor/platformio.ini
@@ -7,15 +7,25 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+[platformio]
+extra_configs = /home/rsteenbu/working/platformio/common_pio_config.ini
 
 [extra]
-build_flags = -D 'WIFI_SSID="***REMOVED***"' -D 'WIFI_PASS="***REMOVED***"' -D 'ADALIB'
+hostname = iot-computerroom
+build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"' -D 'ADALIB'
 
-[env:nodemcuv2]
+[env:usb]
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
-upload_protocol = espota
 build_flags = ${extra.build_flags}
-upload_port = iot-computerroom
 lib_extra_dirs = ~/working/platformio/lib
+
+[env:wifi]
+platform = espressif8266
+board = nodemcuv2
+framework = arduino
+build_flags = ${extra.build_flags}
+lib_extra_dirs = ~/working/platformio/lib
+upload_protocol = espota
+upload_port = ${extra.hostname}
