bug fixes and setting schedule up for backyard irrigation

--- a/ESP01-bootstrap/platformio.ini
+++ b/ESP01-bootstrap/platformio.ini
@@ -11,7 +11,7 @@
 extra_configs = /home/rsteenbu/working/platformio/common_pio_config.ini
 
 [extra]
-hostname = iot-cottagedoor
+hostname = iot-bootstrap
 build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"'
 
 [env:usb]
@@ -20,3 +20,12 @@ board = esp01_1m
 framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/working/platformio/lib
+
+[env:wifi]
+platform = espressif8266
+board = esp01_1m
+framework = arduino
+build_flags = ${extra.build_flags}
+lib_extra_dirs = ~/working/platformio/lib
+upload_protocol = espota
+upload_port = ${extra.hostname}
