system wide updates and fixes to get things to compile

--- a/Irrigation-i2c/platformio.ini
+++ b/Irrigation-i2c/platformio.ini
@@ -14,5 +14,5 @@ board = esp01_1m
 framework = arduino
 upload_protocol = espota
 upload_flags = --port=8266
-lib_extra_dirs = ~/working/platformio/lib
+lib_extra_dirs = ~/platformio/lib
 
