--- a/FrontYard/platformio.ini
+++ b/FrontYard/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
-extra_configs = /home/rsteenbu/working/platformio/common_pio_config.ini
+extra_configs = /home/rsteenbu/platformio/common_pio_config.ini
 
 [extra]
 hostname = iot-frontyard
@@ -19,7 +19,7 @@ platform = espressif8266
 board = d1_mini
 framework = arduino
 build_flags = ${extra.build_flags}
-lib_extra_dirs = ~/working/platformio/lib
+lib_extra_dirs = ~/platformio/lib
 
 [env:wifi]
 platform = espressif8266
@@ -27,5 +27,5 @@ board = d1_mini
 framework = arduino
 build_flags = ${extra.build_flags}
 upload_protocol = espota
-lib_extra_dirs = ~/working/platformio/lib
+lib_extra_dirs = ~/platformio/lib
 upload_port = ${extra.hostname}
