--- a/LightSwitch-i2c/platformio.ini
+++ b/LightSwitch-i2c/platformio.ini
@@ -16,4 +16,4 @@ framework = arduino
 upload_protocol = espota
 upload_flags =
   --port=8266
-lib_extra_dirs = ~/working/platformio/lib
+lib_extra_dirs = ~/platformio/lib
