--- a/MotionSensor/platformio.ini
+++ b/MotionSensor/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
-extra_configs = /home/rsteenbu/working/platformio/common_pio_config.ini
+extra_configs = /home/rsteenbu/platformio/common_pio_config.ini
 
 [extra]
 hostname = iot-computerroom
@@ -19,13 +19,13 @@ platform = espressif8266
 board = nodemcuv2
 framework = arduino
 build_flags = ${extra.build_flags}
-lib_extra_dirs = ~/working/platformio/lib
+lib_extra_dirs = ~/platformio/lib
 
 [env:wifi]
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
 build_flags = ${extra.build_flags}
-lib_extra_dirs = ~/working/platformio/lib
+lib_extra_dirs = ~/platformio/lib
 upload_protocol = espota
 upload_port = ${extra.hostname}
