--- a/LightStrip-FASTLED/platformio.ini
+++ b/LightStrip-FASTLED/platformio.ini
@@ -20,8 +20,8 @@ board = teensy41
 framework = arduino
 ;build_flags = ${extra.build_flags}
 platform_packages = 
-   toolchain-gccarmnoneeabi@https://bintray.com/platformio/tool-packages/download_file?file_path=3579c14-toolchain-gccarmnoneeabi-linux_armv6l-1.90301.200702.tar.gz
-   tool-teensy@https://github.com/maxgerhardt/pio-tool-teensy-arm/archive/master.zip
+;   toolchain-gccarmnoneeabi@https://bintray.com/platformio/tool-packages/download_file?file_path=3579c14-toolchain-gccarmnoneeabi-linux_armv6l-1.90301.200702.tar.gz
+;   tool-teensy@https://github.com/maxgerhardt/pio-tool-teensy-arm/archive/master.zip
 ;    platformio/toolchain-gccarmnoneeabi @ 1.90301.200702
 
 
@@ -29,6 +29,7 @@ platform_packages =
 platform = teensy
 board = teensy31
 framework = arduino
+upload_protocol = teensy-cli
 ;build_flags = ${extra.build_flags}
 ;platform_packages = 
 ;   toolchain-gccarmnoneeabi@https://bintray.com/platformio/tool-packages/download_file?file_path=3579c14-toolchain-gccarmnoneeabi-linux_armv6l-1.90301.200702.tar.gz
