adding gcc arm toolkit for raspberry pi zero

--- a/GarageDoor/platformio.ini
+++ b/GarageDoor/platformio.ini
@@ -11,19 +11,19 @@
 extra_configs = /home/rsteenbu/platformio/common_pio_config.ini
 
 [extra]
-hostname = iot-cottagedoor
+hostname = iot-garagetest
 build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"'
 
 [env:usb]
 platform = espressif8266
-board = d1_mini
+board = nodemcuv2
 framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 
 [env:wifi]
 platform = espressif8266
-board = d1_mini
+board = nodemcuv2
 framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
