--- a/LightStrip-FASTLED/platformio.ini
+++ b/LightStrip-FASTLED/platformio.ini
@@ -11,7 +11,7 @@
 extra_configs = /home/rsteenbu/platformio/common_pio_config.ini
 
 [extra]
-hostname = iot-lightstrip-fastled
+hostname = iot-lightstrip1-fastled
 build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"'
 
 [env:teensy41_usb]
