quick update to pio.ini

--- a/LightStrip-FASTLED/platformio.ini
+++ b/LightStrip-FASTLED/platformio.ini
@@ -30,6 +30,13 @@ platform = teensy
 board = teensy31
 framework = arduino
 upload_protocol = teensy-cli
+;platform_packages = 
+   toolchain-gccarmnoneeabi@file:///home/rsteenbu/platformio/packages/toolchain-gccarmnoneeabi-linux_armv6l-1.50401.160919.tar.gz
+   tool-teensy@https://github.com/maxgerhardt/pio-tool-teensy-arm/archive
+;   toolchain-gccarmnoneeabi@https://bintray.com/maxgerhardt/pio-tools/download_file?file_path=toolchain-gccarmnoneeabi-linux_armv6l-1.90301.201121.tar.gz
+;   tool-teensy@https://github.com/maxgerhardt/pio-tool-teensy-arm/archive/master.zip
+
+
 ;build_flags = ${extra.build_flags}
 ;platform_packages = 
 ;   toolchain-gccarmnoneeabi@https://bintray.com/platformio/tool-packages/download_file?file_path=3579c14-toolchain-gccarmnoneeabi-linux_armv6l-1.90301.200702.tar.gz
