twinklefox on the network

--- a/LightStrip-FASTLED/platformio.ini
+++ b/LightStrip-FASTLED/platformio.ini
@@ -11,7 +11,7 @@
 extra_configs = /home/rsteenbu/platformio/common_pio_config.ini
 
 [extra]
-hostname = iot-lightstrip1-fastled
+hostname = iot-outside-xmastree
 build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"'
 
 [env:teensy41_usb]
@@ -25,20 +25,12 @@ platform_packages =
 ;    platformio/toolchain-gccarmnoneeabi @ 1.90301.200702
 
 
-[env:teensy32_usb]
+[env:teensy32_pizero]
 platform = teensy
 board = teensy31
 framework = arduino
 upload_protocol = teensy-cli
-;platform_packages = 
+platform_packages = 
    toolchain-gccarmnoneeabi@file:///home/rsteenbu/platformio/packages/toolchain-gccarmnoneeabi-linux_armv6l-1.50401.160919.tar.gz
-   tool-teensy@https://github.com/maxgerhardt/pio-tool-teensy-arm/archive
-;   toolchain-gccarmnoneeabi@https://bintray.com/maxgerhardt/pio-tools/download_file?file_path=toolchain-gccarmnoneeabi-linux_armv6l-1.90301.201121.tar.gz
-;   tool-teensy@https://github.com/maxgerhardt/pio-tool-teensy-arm/archive/master.zip
-
-
-;build_flags = ${extra.build_flags}
-;platform_packages = 
-;   toolchain-gccarmnoneeabi@https://bintray.com/platformio/tool-packages/download_file?file_path=3579c14-toolchain-gccarmnoneeabi-linux_armv6l-1.90301.200702.tar.gz
-;   tool-teensy@https://github.com/maxgerhardt/pio-tool-teensy-arm/archive/master.zip
-;    platformio/toolchain-gccarmnoneeabi @ 1.90301.200702
+   tool-teensy@https://github.com/maxgerhardt/pio-tool-teensy-arm/archive/master.zip
+build_flags = ${extra.build_flags}
