teensy test on the wifi and with network time

--- a/BackyardShed/platformio.ini
+++ b/BackyardShed/platformio.ini
@@ -29,3 +29,6 @@ build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 upload_protocol = espota
 upload_port = ${extra.hostname}
+platform_packages =
+    framework-arduinoespressif8266 @ 3.20704.0
+
