--- a/Teensy-Wifi/platformio.ini
+++ b/Teensy-Wifi/platformio.ini
@@ -23,3 +23,4 @@ platform_packages =
    toolchain-gccarmnoneeabi@file:///home/rsteenbu/platformio/packages/toolchain-gccarmnoneeabi-linux_armv6l-1.50401.160919.tar.gz
    tool-teensy@https://github.com/maxgerhardt/pio-tool-teensy-arm/archive/master.zip
 build_flags = ${extra.build_flags}
+lib_extra_dirs = ~/platformio/lib
