--- a/FrontYard-XmasTree/platformio.ini
+++ b/FrontYard-XmasTree/platformio.ini
@@ -14,17 +14,6 @@ extra_configs = /home/rsteenbu/platformio/common_pio_config.ini
 hostname = iot-outside-xmastree
 build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"'
 
-[env:teensy41_usb]
-platform = teensy
-board = teensy41
-framework = arduino
-;build_flags = ${extra.build_flags}
-platform_packages = 
-;   toolchain-gccarmnoneeabi@https://bintray.com/platformio/tool-packages/download_file?file_path=3579c14-toolchain-gccarmnoneeabi-linux_armv6l-1.90301.200702.tar.gz
-;   tool-teensy@https://github.com/maxgerhardt/pio-tool-teensy-arm/archive/master.zip
-;    platformio/toolchain-gccarmnoneeabi @ 1.90301.200702
-
-
 [env:teensy32_pizero]
 platform = teensy
 board = teensy31
@@ -34,3 +23,4 @@ platform_packages =
    toolchain-gccarmnoneeabi@file:///home/rsteenbu/platformio/packages/toolchain-gccarmnoneeabi-linux_armv6l-1.50401.160919.tar.gz
    tool-teensy@https://github.com/maxgerhardt/pio-tool-teensy-arm/archive/master.zip
 build_flags = ${extra.build_flags}
+lib_extra_dirs = ~/platformio/lib
