making esp8266 able to compile again

--- a/BackyardShed/platformio.ini
+++ b/BackyardShed/platformio.ini
@@ -13,6 +13,8 @@ extra_configs = /home/rsteenbu/platformio/common_pio_config.ini
 [extra]
 hostname = iot-backyardshed
 build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"'
+;lib_compat_mode = strict
+;lib_ignore = ESP8266_AT_WebServer,QNEthernet
 
 [env:usb]
 platform = espressif8266
@@ -29,6 +31,6 @@ build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 upload_protocol = espota
 upload_port = ${extra.hostname}
-platform_packages =
-    framework-arduinoespressif8266 @ 3.20704.0
+;platform_packages =
+;    framework-arduinoespressif8266 @ 3.20704.0
 
