--- a/ESP01-bootstrap/platformio.ini
+++ b/ESP01-bootstrap/platformio.ini
@@ -12,7 +12,7 @@ extra_configs = /home/rsteenbu/platformio/common_pio_config.ini
 
 [extra]
 hostname = iot-bootstrap
-build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"'
+build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"' -ULWIP_OPEN_SRC
 
 [env:usb]
 platform = espressif8266
