--- a/FrontYard-XmasTree/platformio.ini
+++ b/FrontYard-XmasTree/platformio.ini
@@ -7,6 +7,8 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+[common] 
+
 [platformio]
 extra_configs = /home/rsteenbu/platformio/common_pio_config.ini
 
@@ -14,10 +16,15 @@ extra_configs = /home/rsteenbu/platformio/common_pio_config.ini
 hostname = iot-outside-xmastree
 build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"'
 
-[env:teensy41_usb]
+[env]
 platform = teensy
-board = teensy41
 framework = arduino
+build_flags = ${extra.build_flags}
+upload_protocol = teensy-cli
+lib_extra_dirs = ~/platformio/lib, ~/platformio/teensy-lib
+
+[env:teensy41_usb]
+board = teensy41
 ;build_flags = ${extra.build_flags}
 platform_packages = 
 ;   toolchain-gccarmnoneeabi@https://bintray.com/platformio/tool-packages/download_file?file_path=3579c14-toolchain-gccarmnoneeabi-linux_armv6l-1.90301.200702.tar.gz
@@ -25,12 +32,11 @@ platform_packages =
 ;    platformio/toolchain-gccarmnoneeabi @ 1.90301.200702
 
 
-[env:teensy32_pizero]
-platform = teensy
+[env:teensy32]
 board = teensy31
-framework = arduino
-upload_protocol = teensy-cli
+
+[env:teensy32_pizero]
+board = teensy31
 platform_packages = 
    toolchain-gccarmnoneeabi@file:///home/rsteenbu/platformio/packages/toolchain-gccarmnoneeabi-linux_armv6l-1.50401.160919.tar.gz
    tool-teensy@https://github.com/maxgerhardt/pio-tool-teensy-arm/archive/master.zip
-build_flags = ${extra.build_flags}
