--- a/Teensy-Wifi/platformio.ini
+++ b/Teensy-Wifi/platformio.ini
@@ -7,6 +7,9 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+
+[common]
+
 [platformio]
 extra_configs = /home/rsteenbu/platformio/common_pio_config.ini
 
@@ -14,13 +17,18 @@ extra_configs = /home/rsteenbu/platformio/common_pio_config.ini
 hostname = iot-teensytest
 build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"'
 
-[env:teensy32_pizero]
+[env]
 platform = teensy
 board = teensy31
 framework = arduino
 upload_protocol = teensy-cli
-platform_packages = 
-   toolchain-gccarmnoneeabi@file:///home/rsteenbu/platformio/packages/toolchain-gccarmnoneeabi-linux_armv6l-1.50401.160919.tar.gz
-   tool-teensy@https://github.com/maxgerhardt/pio-tool-teensy-arm/archive/master.zip
 build_flags = ${extra.build_flags}
-lib_extra_dirs = ~/platformio/lib
+lib_extra_dirs = ~/platformio/lib, ~/platformio/teensy-lib
+
+[env:teensy32]
+
+[env:teensy32_pizero]
+platform_packages = 
+	toolchain-gccarmnoneeabi@file:///home/rsteenbu/platformio/packages/toolchain-gccarmnoneeabi-linux_armv6l-1.50401.160919.tar.gz
+	tool-teensy@https://github.com/maxgerhardt/pio-tool-teensy-arm/archive/master.zip
+
