moving teensy lib storage dir

--- a/Teensy-Wifi/platformio.ini
+++ b/Teensy-Wifi/platformio.ini
@@ -23,7 +23,7 @@ board = teensy31
 framework = arduino
 upload_protocol = teensy-cli
 build_flags = ${extra.build_flags}
-lib_extra_dirs = ~/platformio/lib, ~/platformio/teensy-lib
+lib_extra_dirs = ~/platformio/lib, ~/platformio/storage-lib/teensy
 
 [env:teensy32]
 
