working with vscode; cleaned up irrigation initialization

--- a/D1MINI-bootstrap/platformio.ini
+++ b/D1MINI-bootstrap/platformio.ini
@@ -8,10 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
-extra_configs = ~rsteenbu/platformio/common_pio_config.ini
+extra_configs = ~/platformio/common_pio_config.ini
+monitor_speed = 115200
 
 [extra]
-hostname = iot-frontyard
+hostname = iot-bootstrap
 build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"'
 
 [env:usb]
@@ -20,12 +21,13 @@ board = d1_mini
 framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
+monitor_speed = 115200
 
 [env:wifi]
 platform = espressif8266
 board = d1_mini
 framework = arduino
 build_flags = ${extra.build_flags}
-upload_protocol = espota
 lib_extra_dirs = ~/platformio/lib
+upload_protocol = espota
 upload_port = ${extra.hostname}
