--- a/BackyardShed/platformio.ini
+++ b/BackyardShed/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
-extra_configs = /home/rsteenbu/platformio/common_pio_config.ini
+extra_configs = ~rsteenbu/platformio/common_pio_config.ini
 
 [extra]
 hostname = iot-backyardshed
@@ -16,10 +16,12 @@ build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"'
 
 [env:usb]
 platform = espressif8266
-board = esp01_1m
+board = d1_mini
+;board = esp01_1m
 framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
+monitor_speed = 115200
 
 [env:wifi]
 platform = espressif8266
