splitting header and cpp files

--- a/GarageDoor/platformio.ini
+++ b/GarageDoor/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
-extra_configs = /home/rsteenbu/platformio/common_pio_config.ini
+extra_configs = ~rsteenbu/platformio/common_pio_config.ini
 
 [extra]
 hostname = iot-garagetest
@@ -20,6 +20,14 @@ board = nodemcuv2
 framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
+lib_deps = 
+  arcao/Syslog
+  bblanchon/ArduinoJson
+  janelia-arduino/Array
+  adafruit/Adafruit ADS1X15
+  adafruit/Adafruit MCP23017 Arduino Library
+  adafruit/Adafruit VEML7700 Library
+  enjoyneering/LiquidCrystal_I2C
 
 [env:wifi]
 platform = espressif8266
