--- a/LightSwitch/platformio.ini
+++ b/LightSwitch/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
-extra_configs = /home/rsteenbu/platformio/common_pio_config.ini
+extra_configs = ~/platformio/common_pio_config.ini
 
 [extra]
 hostname = iot-compdeskswitch
@@ -20,6 +20,7 @@ board = esp01_1m
 framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
+monitor_speed = 115200
 
 [env:wifi]
 platform = espressif8266
