--- a/BackyardShed/platformio.ini
+++ b/BackyardShed/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
-extra_configs = ~rsteenbu/platformio/common_pio_config.ini
+extra_configs = ~/platformio/common_pio_config.ini
 
 [extra]
 hostname = iot-backyardshed
@@ -22,6 +22,16 @@ framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 monitor_speed = 115200
+lib_deps = 
+  arcao/Syslog
+  bblanchon/ArduinoJson
+  janelia-arduino/Array
+  janelia-arduino/Vector
+  enjoyneering/LiquidCrystal_I2C
+  adafruit/Adafruit VEML7700 Library
+  adafruit/Adafruit ADS1X15
+  adafruit/Adafruit MCP23017 Arduino Library
+
 
 [env:wifi]
 platform = espressif8266
