--- a/CottageDoor/platformio.ini
+++ b/CottageDoor/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
-extra_configs = /home/rsteenbu/platformio/common_pio_config.ini
+extra_configs = ~rsteenbu/platformio/common_pio_config.ini
 
 [extra]
 hostname = iot-cottagedoor
@@ -20,7 +20,15 @@ board = esp01_1m
 framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
-
+lib_deps = 
+  arcao/Syslog
+  bblanchon/ArduinoJson
+  janelia-arduino/Array
+  adafruit/Adafruit VEML7700 Library
+  adafruit/Adafruit ADS1X15
+  adafruit/Adafruit MCP23017 Arduino Library
+  enjoyneering/LiquidCrystal_I2C
+ 
 [env:wifi]
 platform = espressif8266
 board = esp01_1m
