--- a/FrontYard/platformio.ini
+++ b/FrontYard/platformio.ini
@@ -20,6 +20,16 @@ board = d1_mini
 framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
+lib_deps = 
+  arcao/Syslog
+  bblanchon/ArduinoJson
+  janelia-arduino/Array
+  adafruit/Adafruit VEML7700 Library
+  adafruit/Adafruit ADS1X15
+  adafruit/Adafruit MCP23017 Arduino Library
+  enjoyneering/LiquidCrystal_I2C
+  paulstoffregen/OneWire 
+  milesburton/DallasTemperature
 
 [env:wifi]
 platform = espressif8266
