adding lib_deps to common file

--- a/CottageDoor/platformio.ini
+++ b/CottageDoor/platformio.ini
@@ -20,15 +20,8 @@ board = esp01_1m
 framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
-lib_deps = 
-  arcao/Syslog
-  bblanchon/ArduinoJson
-  janelia-arduino/Array
-  adafruit/Adafruit VEML7700 Library
-  adafruit/Adafruit ADS1X15
-  adafruit/Adafruit MCP23017 Arduino Library
-  enjoyneering/LiquidCrystal_I2C
- 
+lib_deps = ${common.8266_lib_deps}
+
 [env:wifi]
 platform = espressif8266
 board = esp01_1m
@@ -37,3 +30,4 @@ build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 upload_protocol = espota
 upload_port = ${extra.hostname}
+lib_deps = ${common.8266_lib_deps}
