--- a/ESP01-bootstrap/platformio.ini
+++ b/ESP01-bootstrap/platformio.ini
@@ -20,6 +20,7 @@ board = esp01_1m
 framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
+lib_deps = ${common.8266_lib_deps}
 
 [env:wifi]
 platform = espressif8266
@@ -29,3 +30,4 @@ build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 upload_protocol = espota
 upload_port = ${extra.hostname}
+lib_deps = ${common.8266_lib_deps}
