--- a/BackyardLights/platformio.ini
+++ b/BackyardLights/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
-extra_configs = ~rsteenbu/platformio/common_pio_config.ini
+extra_configs = ~/platformio/common_pio_config.ini
 
 [extra]
 hostname = iot-backyardlight
@@ -20,18 +20,7 @@ board = esp01_1m
 framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
-lib_deps = 
-  arcao/Syslog
-  bblanchon/ArduinoJson
-  janelia-arduino/Array
-  janelia-arduino/Vector
-  adafruit/Adafruit BusIO
-  adafruit/Adafruit VEML7700 Library
-  adafruit/Adafruit ADS1X15
-  adafruit/Adafruit MCP23017 Arduino Library
-  paulstoffregen/OneWire 
-  adafruit/Adafruit AM2315
-  enjoyneering/LiquidCrystal_I2C
+lib_deps = ${common.8266_lib_deps}
 
 [env:wifi]
 platform = espressif8266
@@ -41,3 +30,4 @@ build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 upload_protocol = espota
 upload_port = ${extra.hostname}
+lib_deps = ${common.8266_lib_deps}
