--- a/BackyardShed/platformio.ini
+++ b/BackyardShed/platformio.ini
@@ -22,16 +22,7 @@ framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 monitor_speed = 115200
-lib_deps = 
-  arcao/Syslog
-  bblanchon/ArduinoJson
-  janelia-arduino/Array
-  janelia-arduino/Vector
-  enjoyneering/LiquidCrystal_I2C
-  adafruit/Adafruit VEML7700 Library
-  adafruit/Adafruit ADS1X15
-  adafruit/Adafruit MCP23017 Arduino Library
-
+lib_deps = ${common.8266_lib_deps}
 
 [env:wifi]
 platform = espressif8266
@@ -41,3 +32,4 @@ build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 upload_protocol = espota
 upload_port = ${extra.hostname}
+lib_deps = ${common.8266_lib_deps}
