--- a/D1MINI-bootstrap/platformio.ini
+++ b/D1MINI-bootstrap/platformio.ini
@@ -22,6 +22,7 @@ framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 monitor_speed = 115200
+lib_deps = ${common.8266_lib_deps}
 
 [env:wifi]
 platform = espressif8266
@@ -31,3 +32,4 @@ build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 upload_protocol = espota
 upload_port = ${extra.hostname}
+lib_deps = ${common.8266_lib_deps}
