--- a/FrontYard/platformio.ini
+++ b/FrontYard/platformio.ini
@@ -13,6 +13,9 @@ extra_configs = ~rsteenbu/platformio/common_pio_config.ini
 [extra]
 hostname = iot-frontyard
 build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"'
+8266_lib_deps = 
+  paulstoffregen/OneWire
+  milesburton/DallasTemperature
 
 [env:usb]
 platform = espressif8266
@@ -20,16 +23,7 @@ board = d1_mini
 framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
-lib_deps = 
-  arcao/Syslog
-  bblanchon/ArduinoJson
-  janelia-arduino/Array
-  adafruit/Adafruit VEML7700 Library
-  adafruit/Adafruit ADS1X15
-  adafruit/Adafruit MCP23017 Arduino Library
-  enjoyneering/LiquidCrystal_I2C
-  paulstoffregen/OneWire 
-  milesburton/DallasTemperature
+lib_deps = ${common.8266_lib_deps} ${extra.8266_lib_deps}
 
 [env:wifi]
 platform = espressif8266
@@ -39,3 +33,4 @@ build_flags = ${extra.build_flags}
 upload_protocol = espota
 lib_extra_dirs = ~/platformio/lib
 upload_port = ${extra.hostname}
+lib_deps = ${common.8266_lib_deps} ${extra.8266_lib_deps}
