--- a/GarageDoor/platformio.ini
+++ b/GarageDoor/platformio.ini
@@ -20,14 +20,7 @@ board = nodemcuv2
 framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
-lib_deps = 
-  arcao/Syslog
-  bblanchon/ArduinoJson
-  janelia-arduino/Array
-  adafruit/Adafruit ADS1X15
-  adafruit/Adafruit MCP23017 Arduino Library
-  adafruit/Adafruit VEML7700 Library
-  enjoyneering/LiquidCrystal_I2C
+lib_deps = ${common.8266_lib_deps}
 
 [env:wifi]
 platform = espressif8266
@@ -37,3 +30,4 @@ build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 upload_protocol = espota
 upload_port = ${extra.hostname}
+lib_deps = ${common.8266_lib_deps}
