--- a/MotionSensor/platformio.ini
+++ b/MotionSensor/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
-extra_configs = /home/rsteenbu/platformio/common_pio_config.ini
+extra_configs = ~/platformio/common_pio_config.ini
 
 [extra]
 hostname = iot-computerroom
@@ -20,6 +20,7 @@ board = nodemcuv2
 framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
+lib_deps = ${common.8266_lib_deps}
 
 [env:wifi]
 platform = espressif8266
@@ -29,3 +30,4 @@ build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 upload_protocol = espota
 upload_port = ${extra.hostname}
+lib_deps = ${common.8266_lib_deps}
