--- a/common_pio_config.ini
+++ b/common_pio_config.ini
@@ -8,17 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
-extra_configs = ~/platformio/common_pio_config.ini
-ini
-[extra]
-hostname = iot-esp32bootstrap
-build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"'
+extra_configs = ~/platformio/extra_pio_configs.ini
 
-[env:esp32]
-platform = espressif32
-board = esp32dev
-framework = arduino
-upload_protocol = espota
-;upload_flags = 
-;	--port=/dev/ttyUSB0
-lib_deps = ${common.8266_lib_deps}
+[common]
+8266_lib_deps = 
+  arcao/Syslog
+  bblanchon/ArduinoJson
+  janelia-arduino/Array
+  janelia-arduino/Vector
+  enjoyneering/LiquidCrystal_I2C
+  adafruit/Adafruit VEML7700 Library
+  adafruit/Adafruit ADS1X15
+  adafruit/Adafruit MCP23017 Arduino Library
