force returning a number for humidity and temperature

--- a/MedusaHydrometer/platformio.ini
+++ b/MedusaHydrometer/platformio.ini
@@ -13,6 +13,9 @@ extra_configs = ~/platformio/common_pio_config.ini
 [extra]
 hostname = iot-medusa
 build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"'
+lib_deps = ${common.8266_lib_deps} 
+  adafruit/Adafruit Unified Sensor
+  adafruit/DHT sensor library
 
 [env:usb]
 platform = espressif8266
@@ -20,7 +23,7 @@ board = d1_mini
 framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
-lib_deps = ${common.8266_lib_deps}
+lib_deps = ${extra.lib_deps} 
 
 [env:wifi]
 platform = espressif8266
@@ -30,4 +33,4 @@ build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 upload_protocol = espota
 upload_port = ${extra.hostname}
-lib_deps = ${common.8266_lib_deps}
+lib_deps = ${extra.lib_deps} 
