reorganizing lib dirs so not everything compiles; getting teensy with espat sheild working (again), this time from my mac

--- a/Teensy-Wifi/platformio.ini
+++ b/Teensy-Wifi/platformio.ini
@@ -11,7 +11,7 @@
 [common]
 
 [platformio]
-extra_configs = /home/rsteenbu/platformio/common_pio_config.ini
+extra_configs = ~/platformio/common_pio_config.ini
 
 [extra]
 hostname = iot-teensytest
@@ -23,7 +23,10 @@ board = teensy31
 framework = arduino
 upload_protocol = teensy-cli
 build_flags = ${extra.build_flags}
-lib_extra_dirs = ~/platformio/lib, ~/platformio/storage-lib/teensy
+; ignore this library to avoid the class redefinition effor for 'class WiFiUDP'
+lib_ignore = WiFi101
+lib_deps = ${common.teensy_lib_deps}
+lib_extra_dirs =  ~/platformio/lib
 
 [env:teensy32]
 
