--- a/common_pio_config.ini
+++ b/common_pio_config.ini
@@ -11,6 +11,13 @@
 extra_configs = ~/platformio/extra_pio_configs.ini
 
 [common]
+teensy_lib_deps =
+  arcao/Syslog
+  bblanchon/ArduinoJson
+  jchristensen/Timezone
+  jandrassy/WiFiEspAT
+  khoih-prog/WiFiWebServer
+
 8266_lib_deps = 
   arcao/Syslog
   bblanchon/ArduinoJson
