migratig Teensy-WiFi to arduinohttpd b/c of hanging issues

--- a/common_pio_config.ini
+++ b/common_pio_config.ini
@@ -14,9 +14,14 @@ extra_configs = ~/platformio/extra_pio_configs.ini
 teensy_lib_deps =
   arcao/Syslog
   bblanchon/ArduinoJson
+;  paulstoffregen/Time
   jchristensen/Timezone
   jandrassy/WiFiEspAT
-  khoih-prog/WiFiWebServer
+  quicksander/ArduinoHttpServer
+;  marcoschwartz/aREST
+;  celcius-labs/tiny-http
+;  khoih-prog/ESP8266_AT_WebServer
+;  khoih-prog/WiFiWebServer@!=1.10.0
 
 8266_lib_deps = 
   arcao/Syslog
