frontyard xmas tree with arduinohttp; making a single espbootstrap dir

--- a/ESP-bootstrap/platformio.ini
+++ b/ESP-bootstrap/platformio.ini
@@ -8,21 +8,22 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
-extra_configs = /home/rsteenbu/platformio/common_pio_config.ini
+extra_configs = ~/platformio/common_pio_config.ini
 
 [extra]
 hostname = iot-bootstrap
 build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"'
 
-[env:usb]
+[env:esp01usb]
 platform = espressif8266
 board = esp01_1m
 framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 lib_deps = ${common.8266_lib_deps}
+  adafruit/Adafruit BusIO
 
-[env:wifi]
+[env:esp01wifi]
 platform = espressif8266
 board = esp01_1m
 framework = arduino
@@ -31,3 +32,25 @@ lib_extra_dirs = ~/platformio/lib
 upload_protocol = espota
 upload_port = ${extra.hostname}
 lib_deps = ${common.8266_lib_deps}
+  adafruit/Adafruit BusIO
+
+[env:esp32usb]
+platform = espressif32
+board = esp32dev
+framework = arduino
+build_flags = ${extra.build_flags}
+lib_extra_dirs = ~/platformio/lib
+monitor_speed = 115200
+lib_deps = ${common.8266_lib_deps}
+  adafruit/Adafruit BusIO
+
+[env:esp32wifi]
+platform = espressif32
+board = esp32dev
+framework = arduino
+build_flags = ${extra.build_flags}
+lib_extra_dirs = ~/platformio/lib
+upload_protocol = espota
+upload_port = ${extra.hostname}
+lib_deps = ${common.8266_lib_deps}
+  adafruit/Adafruit BusIO
