--- a/FrontYard-XmasTree/platformio.ini
+++ b/FrontYard-XmasTree/platformio.ini
@@ -10,7 +10,7 @@
 [common] 
 
 [platformio]
-extra_configs = /home/rsteenbu/platformio/common_pio_config.ini
+extra_configs = ~/platformio/common_pio_config.ini
 
 [extra]
 hostname = iot-outside-xmastree
@@ -18,10 +18,19 @@ build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"'
 
 [env]
 platform = teensy
+board = teensy31
 framework = arduino
-build_flags = ${extra.build_flags}
 upload_protocol = teensy-cli
-lib_extra_dirs = ~/platformio/lib, ~/platformio/teensy-lib
+build_flags = ${extra.build_flags}
+lib_extra_dirs =  ~/platformio/lib
+; ignore this library to avoid the class redefinition effor for 'class WiFiUDP'
+lib_ignore = 
+  WiFi101 
+  WiFi101_Generic
+lib_deps = 
+  ${common.teensy_lib_deps} 
+  fastled/FastLED
+  paulstoffregen/OctoWS2811
 
 [env:teensy41_usb]
 board = teensy41
