--- a/Teensy-Wifi/platformio.ini
+++ b/Teensy-Wifi/platformio.ini
@@ -15,7 +15,7 @@ extra_configs = ~/platformio/common_pio_config.ini
 
 [extra]
 hostname = iot-teensytest
-build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"' -DWIFIESPAT_TCP_RX_BUFFER_SIZE=0 -DWIFIESPAT_TCP_TX_BUFFER_SIZE=0
+build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"'
 
 [env]
 platform = teensy
