removing D1MINI-bootstrap

--- a/ESP-bootstrap/platformio.ini
+++ b/ESP-bootstrap/platformio.ini
@@ -54,3 +54,24 @@ upload_protocol = espota
 upload_port = ${extra.hostname}
 lib_deps = ${common.8266_lib_deps}
   adafruit/Adafruit BusIO
+
+[env:d1miniusb]
+platform = espressif8266
+board = d1_mini
+framework = arduino
+build_flags = ${extra.build_flags}
+lib_extra_dirs = ~/platformio/lib
+monitor_speed = 115200
+lib_deps = ${common.8266_lib_deps}
+  adafruit/Adafruit BusIO
+
+[env:d1miniwifi]
+platform = espressif8266
+board = d1_mini
+framework = arduino
+build_flags = ${extra.build_flags}
+lib_extra_dirs = ~/platformio/lib
+upload_protocol = espota
+upload_port = ${extra.hostname}
+lib_deps = ${common.8266_lib_deps}
+  adafruit/Adafruit BusIO
