getting everything working

--- a/MedusaHydrometer/platformio.ini
+++ b/MedusaHydrometer/platformio.ini
@@ -11,26 +11,47 @@
 extra_configs = ~/platformio/common_pio_config.ini
 
 [extra]
-hostname = iot-medusa
-build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"'
+build_flags = ${common.build_flags}
 lib_deps = ${common.8266_lib_deps} 
   adafruit/Adafruit Unified Sensor
   adafruit/DHT sensor library
+  enjoyneering/LiquidCrystal_I2C
+  adafruit/Adafruit MCP23017 Arduino Library
+  adafruit/Adafruit ADS1X15
+  adafruit/Adafruit VEML7700 Library
 
-[env:usb]
+[env:medusa-usb]
 platform = espressif8266
 board = d1_mini
 framework = arduino
-build_flags = ${extra.build_flags}
+build_flags = ${extra.build_flags} -D 'DEVICE_HOSTNAME="iot-medusa"'
 lib_extra_dirs = ~/platformio/lib
 lib_deps = ${extra.lib_deps} 
 
-[env:wifi]
+[env:medusa-wifi]
 platform = espressif8266
 board = d1_mini
 framework = arduino
-build_flags = ${extra.build_flags}
+build_flags = ${extra.build_flags} -D 'DEVICE_HOSTNAME="iot-medusa"'
 lib_extra_dirs = ~/platformio/lib
 upload_protocol = espota
 upload_port = ${extra.hostname}
+lib_deps = ${extra.lib_deps} 
+
+[env:geckster-usb]
+platform = espressif8266
+board = d1_mini
+framework = arduino
+build_flags = ${extra.build_flags} -D 'DEVICE_HOSTNAME="iot-geckster"'
+lib_extra_dirs = ~/platformio/lib
+lib_deps = ${extra.lib_deps} 
+
+[env:geckster-wifi]
+platform = espressif8266
+board = d1_mini
+framework = arduino
+build_flags = ${extra.build_flags} -D 'DEVICE_HOSTNAME="iot-geckster"'
+lib_extra_dirs = ~/platformio/lib
+upload_protocol = espota
+upload_port = iot-geckster
 lib_deps = ${extra.lib_deps} 
