--- a/common_pio_config.ini
+++ b/common_pio_config.ini
@@ -28,7 +28,7 @@ teensy_lib_deps =
   bblanchon/ArduinoJson
   janelia-arduino/Array
   janelia-arduino/Vector
-  enjoyneering/LiquidCrystal_I2C
-  adafruit/Adafruit VEML7700 Library
-  adafruit/Adafruit ADS1X15
-  adafruit/Adafruit MCP23017 Arduino Library
+;  enjoyneering/LiquidCrystal_I2C
+;  adafruit/Adafruit VEML7700 Library
+;  adafruit/Adafruit ADS1X15
+;  adafruit/Adafruit MCP23017 Arduino Library
