--- a/MedusaHydrometer/platformio.ini
+++ b/MedusaHydrometer/platformio.ini
@@ -10,6 +10,7 @@
 [platformio]
 extra_configs = ~/platformio/common_pio_config.ini
 
+
 [extra]
 build_flags = ${common.build_flags}
 lib_deps = ${common.8266_lib_deps} 
@@ -45,6 +46,8 @@ framework = arduino
 build_flags = ${extra.build_flags} -D 'DEVICE_HOSTNAME="iot-geckster"'
 lib_extra_dirs = ~/platformio/lib
 lib_deps = ${extra.lib_deps} 
+monitor_filters = esp8266_exception_decoder, default
+build_type = debug
 
 [env:geckster-wifi]
 platform = espressif8266
