--- a/FrontYard/platformio.ini
+++ b/FrontYard/platformio.ini
@@ -16,6 +16,12 @@ build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"'
 8266_lib_deps = 
   paulstoffregen/OneWire
   milesburton/DallasTemperature
+  adafruit/Adafruit BusIO
+  adafruit/Adafruit GFX Library
+  adafruit/Adafruit SSD1306
+  adafruit/Adafruit MCP23017 Arduino Library
+  adafruit/Adafruit ADS1X15
+  adafruit/Adafruit VEML7700 Library
 
 [env:usb]
 platform = espressif8266
