relay cleanup; FastLED driver for Olivia's led

--- a/OliviaFastLED/platformio.ini
+++ b/OliviaFastLED/platformio.ini
@@ -23,7 +23,10 @@ lib_extra_dirs = ~/platformio/lib
 monitor_speed = 115200
 lib_deps = ${common.8266_lib_deps}
   fastled/FastLED
-
+  adafruit/Adafruit MCP23017 Arduino Library
+  adafruit/Adafruit ADS1X15
+  adafruit/Adafruit VEML7700 Library
+ 
 [env:esp32wifi]
 platform = espressif32
 board = esp32dev
@@ -34,4 +37,7 @@ upload_protocol = espota
 upload_port = ${extra.hostname}
 lib_deps = ${common.8266_lib_deps}
   fastled/FastLED
+  adafruit/Adafruit MCP23017 Arduino Library
+  adafruit/Adafruit ADS1X15
+  adafruit/Adafruit VEML7700 Library
 
