lots of changes... led lightstrip rotary encoder working for colors

--- a/PetHydrometer/platformio.ini
+++ b/PetHydrometer/platformio.ini
@@ -10,7 +10,6 @@
 [platformio]
 extra_configs = ~/platformio/common_pio_config.ini
 
-
 [extra]
 build_flags = ${common.build_flags}
 lib_deps = ${common.8266_lib_deps} 
@@ -36,7 +35,7 @@ framework = arduino
 build_flags = ${extra.build_flags} -D 'DEVICE_HOSTNAME="iot-medusa"'
 lib_extra_dirs = ~/platformio/lib
 upload_protocol = espota
-upload_port = ${extra.hostname}
+upload_port = iot-medusa
 lib_deps = ${extra.lib_deps} 
 
 [env:geckster-usb]
