moving Olivia's WS2813FX to a general one; getting teensy41 working with wifi test

--- a/Teensy-Wifi/platformio.ini
+++ b/Teensy-Wifi/platformio.ini
@@ -15,11 +15,10 @@ extra_configs = ~/platformio/common_pio_config.ini
 
 [extra]
 hostname = iot-teensytest
-build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"'
+build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"' -D 'SYSLOG_SERVER="192.168.1.241"' -D 'SYSLOG_PORT=10514' 
 
 [env]
 platform = teensy
-board = teensy31
 framework = arduino
 upload_protocol = teensy-cli
 build_flags = ${extra.build_flags}
@@ -28,7 +27,11 @@ lib_ignore = WiFi101
 lib_deps = ${common.teensy_lib_deps}
 lib_extra_dirs =  ~/platformio/lib
 
-[env:teensy32]
+[env:teensy31]
+board = teensy31
+
+[env:teensy41]
+board = teensy41
 
 [env:teensy32_pizero]
 platform_packages = 
