just getting untracked changes put in

--- a/PetHydrometer/platformio.ini
+++ b/PetHydrometer/platformio.ini
@@ -11,7 +11,7 @@
 extra_configs = ~/platformio/common_pio_config.ini
 
 [extra]
-build_flags = ${common.build_flags}
+build_flags = ${common.build_flags} -D 'SYSLOG_SERVER="192.168.1.15"' -D 'SYSLOG_PORT=514'
 lib_deps = ${common.8266_lib_deps} 
   adafruit/Adafruit Unified Sensor
   adafruit/DHT sensor library
