a bit of refactoring of humidity stuff.  Allowing more indendant configuration for medusa and geckster

--- a/PetHydrometer/platformio.ini
+++ b/PetHydrometer/platformio.ini
@@ -24,7 +24,7 @@ lib_deps = ${common.8266_lib_deps}
 platform = espressif8266
 board = d1_mini
 framework = arduino
-build_flags = ${extra.build_flags} -D 'DEVICE_HOSTNAME="iot-medusa"'
+build_flags = ${extra.build_flags} -D 'DEVICE_HOSTNAME="iot-medusa"' -D 'PET_NAME="medusa"'
 lib_extra_dirs = ~/platformio/lib
 lib_deps = ${extra.lib_deps} 
 
@@ -32,7 +32,7 @@ lib_deps = ${extra.lib_deps}
 platform = espressif8266
 board = d1_mini
 framework = arduino
-build_flags = ${extra.build_flags} -D 'DEVICE_HOSTNAME="iot-medusa"'
+build_flags = ${extra.build_flags} -D 'DEVICE_HOSTNAME="iot-medusa"' -D 'PET_NAME="medusa"'
 lib_extra_dirs = ~/platformio/lib
 upload_protocol = espota
 upload_port = iot-medusa
@@ -42,7 +42,7 @@ lib_deps = ${extra.lib_deps}
 platform = espressif8266
 board = d1_mini
 framework = arduino
-build_flags = ${extra.build_flags} -D 'DEVICE_HOSTNAME="iot-geckster"'
+build_flags = ${extra.build_flags} -D 'DEVICE_HOSTNAME="iot-geckster"' -D 'PET_NAME="geckster"'
 lib_extra_dirs = ~/platformio/lib
 lib_deps = ${extra.lib_deps} 
 monitor_filters = esp8266_exception_decoder, default
@@ -52,7 +52,7 @@ build_type = debug
 platform = espressif8266
 board = d1_mini
 framework = arduino
-build_flags = ${extra.build_flags} -D 'DEVICE_HOSTNAME="iot-geckster"'
+build_flags = ${extra.build_flags} -D 'DEVICE_HOSTNAME="iot-geckster"' -D 'PET_NAME="geckster"'
 lib_extra_dirs = ~/platformio/lib
 upload_protocol = espota
 upload_port = iot-geckster
