--- a/WS2812FX-LightStrip/platformio.ini
+++ b/WS2812FX-LightStrip/platformio.ini
@@ -11,7 +11,7 @@
 extra_configs = ~/platformio/common_pio_config.ini
 
 [extra]
-build_flags = ${common.build_flags} -D 'SYSLOG_SERVER="192.168.1.241"' -D 'SYSLOG_PORT=10514' 
+build_flags = ${common.build_flags} -D 'SYSLOG_SERVER="192.168.1.15"' -D 'SYSLOG_PORT=514' 
 lib_deps = ${common.8266_lib_deps}
   kitesurfer1404/WS2812FX
   adafruit/Adafruit MCP23017 Arduino Library
@@ -28,8 +28,9 @@ build_flags =
   -D 'ROTENC_CLK=26'
   -D 'ROTENC_DT=35'
   -D 'ROTENC_SW=32'
-  -D 'LED_PIN=18'
-  -D 'LED_COUNT=232'
+  -D 'LED_ACTIVE_PINS=1'
+  -D 'LED_PIN_P1=18'
+  -D 'LED_COUNT_P1=232'
   -D 'MOTION_PIN=33'
   -D 'RELAY_PIN=4'
 
@@ -41,10 +42,45 @@ build_flags =
   -D 'ROTENC_CLK=18'
   -D 'ROTENC_DT=19'
   -D 'ROTENC_SW=23'
-  -D 'LED_PIN=14'
-  -D 'LED_COUNT=50'
+  -D 'LED_ACTIVE_PINS=1'
+  -D 'LED_PIN_P1=14'
+  -D 'LED_COUNT_P1=50'
   -D 'MOTION_PIN=27'
   -D 'RELAY_PIN=5'
+
+[frontyard-common-options]
+build_flags =
+  -D 'DEVICE_HOSTNAME="iot-frontlights"'
+  -DNOLCD
+  -D 'LED_COUNT=LED_COUNT_P1+LED_COUNT_P2+LED_COUNT_P3+LED_COUNT_P4'
+  -D 'LED_PIN_P1=27'
+  -D 'LED_COUNT_P1=600'
+  -D 'LED_PIN_P2=13'
+  -D 'LED_COUNT_P2=600'
+  -D 'LED_PIN_P3=32'
+  -D 'LED_COUNT_P3=600'
+  -D 'LED_PIN_P4=33'
+  -D 'LED_COUNT_P4=600'
+
+
+[env:frontyard-usb]
+platform = espressif32
+board = esp32dev
+framework = arduino
+build_flags = ${extra.build_flags} ${frontyard-common-options.build_flags}
+lib_extra_dirs = ~/platformio/lib
+lib_deps = ${extra.lib_deps} 
+monitor_speed = 115200
+ 
+[env:frontyard-wifi]
+platform = espressif32
+board = esp32dev
+framework = arduino
+build_flags = ${extra.build_flags} ${frontyard-common-options.build_flags}
+lib_extra_dirs = ~/platformio/lib
+upload_protocol = espota
+upload_port = 192.168.1.119
+lib_deps = ${extra.lib_deps} 
 
 [env:olivia-usb]
 platform = espressif32
