udpates of what I don't know

--- a/LightSwitch/platformio.ini
+++ b/LightSwitch/platformio.ini
@@ -11,8 +11,12 @@
 extra_configs = ~/platformio/common_pio_config.ini
 
 [extra]
-hostname = iot-compdeskswitch
-build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"'
+hostname = "iot-hobbyswitch"
+build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME=${extra.hostname}' -D 'SYSLOG_SERVER="192.168.1.15"' -D 'SYSLOG_PORT=514'
+lib_deps = ${common.8266_lib_deps} 
+  adafruit/Adafruit MCP23017 Arduino Library
+  adafruit/Adafruit ADS1X15
+  adafruit/Adafruit VEML7700 Library
 
 [env:usb]
 platform = espressif8266
@@ -21,7 +25,7 @@ framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 monitor_speed = 115200
-lib_deps = ${common.8266_lib_deps}
+lib_deps = ${extra.lib_deps}
 
 [env:wifi]
 platform = espressif8266
@@ -31,4 +35,4 @@ build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 upload_protocol = espota
 upload_port = ${extra.hostname}
-lib_deps = ${common.8266_lib_deps}
+lib_deps = ${extra.lib_deps}
