fix syslog server; enable medusa automatic misting

--- a/BackyardShed/platformio.ini
+++ b/BackyardShed/platformio.ini
@@ -9,10 +9,19 @@
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
 extra_configs = ~/platformio/common_pio_config.ini
+default_envs = wifi
+
+[common]
+;syslog override
+;syslog = "192.168.2.10"
 
 [extra]
 hostname = iot-backyardshed
-build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"'
+build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"' -D 'SYSLOG_SERVER=${common.syslog}' -D 'SYSLOG_PORT=514'
+lib_deps = ${common.8266_lib_deps}
+  adafruit/Adafruit MCP23017 Arduino Library
+  adafruit/Adafruit ADS1X15
+  adafruit/Adafruit VEML7700 Library
 
 [env:usb]
 platform = espressif8266
@@ -22,7 +31,7 @@ framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 monitor_speed = 115200
-lib_deps = ${common.8266_lib_deps}
+lib_deps = ${extra.lib_deps}
 
 [env:wifi]
 platform = espressif8266
@@ -32,4 +41,4 @@ build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 upload_protocol = espota
 upload_port = ${extra.hostname}
-lib_deps = ${common.8266_lib_deps}
+lib_deps = ${extra.lib_deps}
