--- a/FrontYard/platformio.ini
+++ b/FrontYard/platformio.ini
@@ -9,10 +9,15 @@
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
 extra_configs = ~rsteenbu/platformio/common_pio_config.ini
+default_envs = wifi
+
+[common]
+;syslog override
+;syslog = "192.168.2.10"
 
 [extra]
 hostname = iot-frontyard
-build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"'
+build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"' -D 'SYSLOG_SERVER=${common.syslog}' -D 'SYSLOG_PORT=514'
 8266_lib_deps = 
   paulstoffregen/OneWire
   milesburton/DallasTemperature
