--- a/BackyardLights/platformio.ini
+++ b/BackyardLights/platformio.ini
@@ -9,10 +9,22 @@
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
 extra_configs = ~/platformio/common_pio_config.ini
+default_envs = wifi
+
+[common]
+;syslog overrride
+;syslog = "192.168.2.10"
 
 [extra]
 hostname = iot-backyardlight
-build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"'
+build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"' -D 'SYSLOG_SERVER=${common.syslog}' -D 'SYSLOG_PORT=514'
+lib_deps = ${common.8266_lib_deps}
+  adafruit/Adafruit BusIO
+  adafruit/Adafruit VEML7700 Library
+  paulstoffregen/OneWire
+  adafruit/Adafruit AM2315
+  adafruit/Adafruit MCP23017 Arduino Library
+  adafruit/Adafruit ADS1X15
 
 [env:usb]
 platform = espressif8266
@@ -20,7 +32,7 @@ board = esp01_1m
 framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
-lib_deps = ${common.8266_lib_deps}
+lib_deps = ${extra.lib_deps}
 
 [env:wifi]
 platform = espressif8266
@@ -30,4 +42,4 @@ build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 upload_protocol = espota
 upload_port = ${extra.hostname}
-lib_deps = ${common.8266_lib_deps}
+lib_deps = ${extra.lib_deps}
