--- a/LightSwitch/platformio.ini
+++ b/LightSwitch/platformio.ini
@@ -9,10 +9,15 @@
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
 extra_configs = ~/platformio/common_pio_config.ini
+default_envs = wifi
+
+[common]
+;syslog override
+;syslog = "192.168.2.10"
 
 [extra]
 hostname = "iot-hobbyswitch"
-build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME=${extra.hostname}' -D 'SYSLOG_SERVER="192.168.1.15"' -D 'SYSLOG_PORT=514'
+build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME=${extra.hostname}' -D 'SYSLOG_SERVER=${common.syslog}' -D 'SYSLOG_PORT=514'
 lib_deps = ${common.8266_lib_deps} 
   adafruit/Adafruit MCP23017 Arduino Library
   adafruit/Adafruit ADS1X15
