--- a/PetHydrometer/platformio.ini
+++ b/PetHydrometer/platformio.ini
@@ -10,8 +10,12 @@
 [platformio]
 extra_configs = ~/platformio/common_pio_config.ini
 
+[common]
+;syslog override
+;syslog = "192.168.2.10"
+
 [extra]
-build_flags = ${common.build_flags} -D 'SYSLOG_SERVER="192.168.1.15"' -D 'SYSLOG_PORT=514'
+build_flags = ${common.build_flags} -D 'SYSLOG_SERVER=${common.syslog}' -D 'SYSLOG_PORT=514'
 lib_deps = ${common.8266_lib_deps} 
   adafruit/Adafruit Unified Sensor
   adafruit/DHT sensor library
