--- a/common_pio_config.ini
+++ b/common_pio_config.ini
@@ -11,6 +11,7 @@
 extra_configs = ~/platformio/extra_pio_configs.ini
 
 [common]
+syslog = "192.168.2.10"
 teensy_lib_deps =
   arcao/Syslog
   bblanchon/ArduinoJson
