updating lightswitch platforio.ini

--- a/LightSwitch/platformio.ini
+++ b/LightSwitch/platformio.ini
@@ -16,12 +16,12 @@ default_envs = wifi
 ;syslog = "192.168.2.10"
 
 [extra]
-hostname = "iot-hobbyswitch"
-build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME=${extra.hostname}' -D 'SYSLOG_SERVER=${common.syslog}' -D 'SYSLOG_PORT=514'
+build_flags = ${common.build_flags} -D 'SYSLOG_SERVER=${common.syslog}' -D 'SYSLOG_PORT=514'
 lib_deps = ${common.8266_lib_deps} 
   adafruit/Adafruit MCP23017 Arduino Library
   adafruit/Adafruit ADS1X15
   adafruit/Adafruit VEML7700 Library
+
 
 [env:usb]
 platform = espressif8266
@@ -30,6 +30,26 @@ framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 monitor_speed = 115200
+lib_deps = ${extra.lib_deps}
+
+[env:hobbyswitch]
+platform = espressif8266
+board = esp01_1m
+framework = arduino
+build_flags = ${extra.build_flags} -D 'DEVICE_HOSTNAME="iot-hobbyswitch"'
+lib_extra_dirs = ~/platformio/lib
+upload_protocol = espota
+upload_port = ${extra.hostname}
+lib_deps = ${extra.lib_deps}
+
+[env:compdeskwtich]
+platform = espressif8266
+board = esp01_1m
+framework = arduino
+build_flags = ${extra.build_flags} -D 'DEVICE_HOSTNAME="iot-compdeskswitch"'
+lib_extra_dirs = ~/platformio/lib
+upload_protocol = espota
+upload_port = ${extra.hostname}
 lib_deps = ${extra.lib_deps}
 
 [env:wifi]
